woocommerce-ajax append product nodes to DOM

--- a/assets/scss/frontend-style.scss
+++ b/assets/scss/frontend-style.scss
@@ -7,6 +7,7 @@
 @import 'assets/scss/common/typography';
 @import 'assets/scss/common/images';
 @import 'assets/scss/common/forms';
+@import 'assets/scss/common/dotted-loader';
 
 @import 'assets/scss/blocks/start';
 @import 'assets/scss/blocks/product';
