--- a/assets/scss/blocks/_product.scss
+++ b/assets/scss/blocks/_product.scss
@@ -74,61 +74,74 @@
     }
 
     .products {
-        @include flex-start-center;
-        flex-wrap: wrap;
-        column-gap: 55px;
-        row-gap: 55px;
         width: 100%;
-        padding: 80px 80px;
-        box-sizing: border-box;
+        @include flex-column-center-start;
 
-        .product {
-            @include flex-start-start-column;
-            width: 250px;
-            cursor: pointer;
-            grid-gap: 5px;
+        #loader {
+            margin-top: 30px;
+        }
+        
+        #products-container {
+            @include flex-start-center;
+            flex-wrap: wrap;
+            column-gap: 55px;
+            row-gap: 55px;
+            width: 100%;
+            padding: 80px 80px;
+            box-sizing: border-box;
 
-            h5 {
-                margin-top: 15px;
-            }
-
-            .image {
-                @include flex-center-center;
+            .product {
+                @include flex-start-start-column;
                 width: 250px;
-                height: 312px;
-
-                img.landscape-img {
-                    width: 250px;
-                    height: 187px;
-                    object-fit: cover;
-                }
-
-                img.portait-img {
-                    width: 250px;
-                    height: 312px;
-                }
-
-            }
-
-            .price {
-                @include flex-start-center;
-                column-gap: 10px;
-
-                span.price-from {
-                    font-size: 12px;
-                }
+                cursor: pointer;
+                grid-gap: 5px;
 
                 h5 {
-                    font-family: 'montserrat_medium';
-                    font-size: 14px;
-                    margin-top: 0px;
+                    margin-top: 15px;
+                }
+
+                .image {
+                    @include flex-center-center;
+                    width: 250px;
+                    height: 312px;
+
+                    img.landscape-img {
+                        width: 250px;
+                        height: 187px;
+                        object-fit: cover;
+                    }
+
+                    img.portait-img {
+                        width: 250px;
+                        height: 312px;
+                    }
+
+                }
+
+                .price {
+                    @include flex-start-center;
+                    column-gap: 10px;
+
+                    span.price-from {
+                        font-size: 12px;
+                    }
+
+                    h5 {
+                        font-family: 'montserrat_medium';
+                        font-size: 14px;
+                        margin-top: 0px;
+                    }
+
                 }
 
             }
 
         }
 
+    }
 
+    .hidden {
+        display: none;
     }
 
 }
