--- a/assets/scss/common/_mixins.scss
+++ b/assets/scss/common/_mixins.scss
@@ -10,6 +10,13 @@
     align-items: center;
 }
 
+@mixin flex-column-center-start {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+}
+
 @mixin flex-space-between {
     display: flex;
     justify-content:space-between;
