--- a/assets/scss/blocks/_product-filters.scss
+++ b/assets/scss/blocks/_product-filters.scss
@@ -29,7 +29,7 @@
             height: 100%;
         }
 
-        .filters-close {
+        #filters-close {
             display: flex;
             justify-content: flex-start;
             align-items: center;
